@@ -89,8 +89,9 @@ command-line option.)
 
 \begin{itemize}
 \item
-  \label{nullness-lint-nonnullarraycomponents}%
-  If you supply the \code{-Alint=forbidnonnullarraycomponents} command-line
+  \label{nullness-lint-newarrayshavenullcomponents}%
+  \label{nullness-lint-nonnullarraycomponents}% temporary, for backward compatibility
+  If you supply the \code{-Alint=newarrayshavenullcomponents} command-line
   option, then the checker warns if it encounters an array creation
   with a non-null component type.
   See Section~\ref{nullness-arrays} for a discussion.
@@ -422,11 +423,11 @@ checker.
 
 To make the Nullness Checker conservatively reject code that may leave a
 non-null value in an array, use the command-line option
-\code{-Alint=forbidnonnullarraycomponents}.  The option is currently disabled
+\code{-Alint=newarrayshavenullcomponents}.  The option is currently disabled
 because it makes the checker issue many false positive errors.
 % TODO: flip the default after collecting more data.
 
-When the \code{-Alint=forbidnonnullarraycomponents} option is supplied,
+When the \code{-Alint=newarrayshavenullcomponents} option is supplied,
 the following is not allowed:
 
 \begin{Verbatim}
@@ -1954,5 +1955,5 @@ annotations).
 % LocalWords:  mymap mykey KeyType ValueType
 % LocalWords:  dereferenced dereference Dereferencing initializers
 % LocalWords:  initHelper helperMethod NoSuchElementException classpath
-% LocalWords:  forbidnonnullarraycomponents lombok findbugs CurrentClass
+% LocalWords:  newarrayshavenullcomponents lombok findbugs CurrentClass
 % LocalWords:  NotOnlyInitialized underinitialization
